--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en">
+<html lang="en"  manifest="manifest.appcache">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -76,8 +76,8 @@
 			<div class="row">
 				<h1 class="lead">The Traveler Bulgaria</h1>
 				
-				<p><a class="btnc btn-default btn-lg" href="SectionUnderConstructionPage.html">View Top Destinations</a> 
-				<a class="btnc btn-action btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
+				
+				<a class="btnc btn-default btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
 
 			</div>
 		</div>
