--- a/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
+++ b/TheTravellerBulgaria/src/main/webapp/NewsFeed.html
@@ -173,7 +173,7 @@
 			<aside class="col-sm-4 sidebar sidebar-right">
 
 				<div class="widget">
-					<h4>Popular destinations</h4>
+					<h4>Additional information on destinations:</h4>
 					<ul id="popDest" class="list-unstyled list-spaces">
 						
 						
