--- a/TheTravellerBulgaria/src/main/webapp/SignUp.html
+++ b/TheTravellerBulgaria/src/main/webapp/SignUp.html
@@ -90,12 +90,12 @@
 							<form id="regForm" action="javascript:add()" enctype="multipart/form-data">
 							    <div class="top-margin">
 							        <label>First Name <span class="text-danger">*</span></label>
-							        <input id="userFirstName" type="text" name="userFirstName" class="form-control" maxlength="20" pattern="^[A-Za-z]+$" required>
+							        <input id="userFirstName" type="text" name="userFirstName" class="form-control" maxlength="20" pattern="^[A-Za-zА-Яа-я]+$" required>
 							    </div>
 							    
 							    <div class="top-margin">
 							        <label>Last Name <span class="text-danger">*</span></label> 
-							        <input id="userLastName" type="text" name="userLastName" class="form-control" maxlength="20" pattern="^[A-Za-z]+$" required>
+							        <input id="userLastName" type="text" name="userLastName" class="form-control" maxlength="20" pattern="^[A-Za-zА-Яа-я]+$" required>
 							    </div>
 							    
 							    <div class="top-margin">
