--- a/TheTravellerBulgaria/src/main/webapp/index.html
+++ b/TheTravellerBulgaria/src/main/webapp/index.html
@@ -75,7 +75,7 @@
 	<header id="head">
 		<div class="container">
 			<div class="row">
-				<h1 class="lead">The Traveler Bulgaria</h1>
+				<h1 class="lead"><b>The Traveler Bulgaria</b></h1>
 				
 				
 				<a class="btnc btn-default btn-lg" href="AllDestinations.html" >View All Destinations</a></p>
