--- a/TheTravellerBulgaria/src/main/webapp/Gallery.html
+++ b/TheTravellerBulgaria/src/main/webapp/Gallery.html
@@ -298,7 +298,7 @@
 						html.push("<td>");
 						html.push("");						
 						
-						var src = ("GetDestinationPicture?pic="+ pic).replace(" ", "%20");
+						var src = ("GetDestinationPicture?pic="+ (pic).split(" ").join("%20"));
 						//html.push("<img src=\"GetDestinationPicture?pic="+ pic + "\" height=\"300\" width=\"400\"/>")
 						html.push('<div class="img bg-img-c" style="width: 400px; background-image: url('+src+')"></div>');
 						
